--- a/style.css
+++ b/style.css
@@ -9,58 +9,113 @@
 /*container*/
 .container{
 
-    width: 700px;
+    width: 80%;
     height: auto;
-    background-color: #fff;
     margin: 0 auto;
+    padding: 80px 0;
 }
 
 /*colonna*/
-.colonna{
-        display: inline-block;
+.card{
         width: calc(100% /3);
-        margin: 0 -2px 30px;
-        padding: 40px 4px;
+        position: relative;
+        height: 900px;
 }
 
-/*dresses*/
-.dresses img{
+
+.heart{
+    width: 50px;
+    height: 50px;
+    background-color: #fff;
+    position: absolute;
+    right: 0;
+    top: 40px;
+    z-index: 3;
+    font-size: 40px;
+    text-align: center;
+    line-height: 50px;
+}
+
+
+
+.card img{
+    position: absolute;
+    top: 0;
+    left: 0; 
     width: 100%;
-}
-.dresses{
-    position: relative;
+    height: 900px;
+    object-fit: cover;
+    
+
 }
 
-/*bollini*/
+.card img:nth-child(1){
+    z-index: 1;
+}
+
+ .card img:nth-child(2){
+   z-index: -1;
+}
+
+.card::hover img:nth-child(2){
+    z-index: 4;
+ } 
 
 .discount{
     position: absolute;
+    bottom: 130px;
     left: 0;
-    bottom: 10%;
-    width: 30px;
-    height: 15px;
+    width: 60px;
+    height: 30px;
     background-color: red;
     color: #fff;
-    font-size: 10px;
+    z-index: 3;
     text-align: center;
-    
-}
+    line-height: 30px;
+    font-weight: bold;
+    font-size: 13px;
+} 
 
 .sostenibilità{
     position: absolute;
-    display: inline-block;
-    left: 35px;
-    bottom: 10%;
+    bottom: 130px;
+    left: 65px;
+    width: 120px;
+    height: 30px;
     background-color: green;
-    height: 15px;
-    width: 60px;
     color: #fff;
-    font-size:10px ;
-}
-
-/*descrizione*/
+    z-index: 3;
+    text-align: center;
+    line-height: 30px;
+    font-weight: bold;
+    font-size: 13px;
+} 
 
 .description{
-    display: inline-block;
+    width: 100%;
+    height: 100px;
+    background-color: #fff;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 3;
+    padding: 5px 0;
 
+}
+
+.description span:nth-child(3){
+    font-family: 30px;
+    font-weight: bold;
+}
+
+.description span:nth-child(5){
+    color: red;
+    font-family: 15px;
+    font-weight: bold;
+}
+
+.description span:nth-child(6){
+    text-decoration: line-through;
+    font-family: 15px;
+    font-weight: bold;
 }
