--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/*general*/
+/*GENERAL*/
 *{
     margin: 0;
     padding: 0;
@@ -6,7 +6,7 @@
     
     
 }
-/*container*/
+/*CONTAINER*/
 .container{
 
     width: 80%;
@@ -15,7 +15,7 @@
     padding: 80px 0;
 }
 
-/*colonna*/
+/*CARD*/
 .card{
         width: calc(100% /3);
         position: relative;
@@ -36,7 +36,9 @@
     line-height: 50px;
 }
 
-
+.card:hover .heart{
+    color: #c1121f;
+}
 
 .card img{
     position: absolute;
@@ -45,20 +47,19 @@
     width: 100%;
     height: 900px;
     object-fit: cover;
-    
-
 }
 
-.card img:nth-child(1){
+ .card img:nth-child(1){
     z-index: 1;
-}
+} 
 
  .card img:nth-child(2){
-   z-index: -1;
+   display: none;
 }
 
-.card::hover img:nth-child(2){
-    z-index: 4;
+.card:hover img:nth-child(2){
+    display: block;
+    z-index: 1;
  } 
 
 .discount{
@@ -67,7 +68,7 @@
     left: 0;
     width: 60px;
     height: 30px;
-    background-color: red;
+    background-color: #c1121f;
     color: #fff;
     z-index: 3;
     text-align: center;
@@ -82,7 +83,7 @@
     left: 65px;
     width: 120px;
     height: 30px;
-    background-color: green;
+    background-color: #3DA35D;
     color: #fff;
     z-index: 3;
     text-align: center;
@@ -91,6 +92,8 @@
     font-size: 13px;
 } 
 
+
+/*DESCRIPTION*/
 .description{
     width: 100%;
     height: 100px;
@@ -100,7 +103,6 @@
     left: 0;
     z-index: 3;
     padding: 5px 0;
-
 }
 
 .description span:nth-child(3){
@@ -109,7 +111,7 @@
 }
 
 .description span:nth-child(5){
-    color: red;
+    color: #c1121f;
     font-family: 15px;
     font-weight: bold;
 }
