--- a/style.css
+++ b/style.css
@@ -11,19 +11,19 @@
 }
 /*CONTAINER*/
 .container{
-
     width: 80%;
     height: auto;
-    margin: 0 auto;
-    padding: 80px 0;
+    margin: 80px auto;
+
 }
 
 /*CARD*/
 .card{
-        width: calc(90% /3);
+        width: 33%;
         position: relative;
         height: 900px;
         display: inline-block;
+        margin: auto;
 }
 
 
